# controllers/clubController.js
@@ -5,9 +5,9 @@ const getAllClubs = async (req, res) => {
     const clubs = await Club.find().populate('members', 'name email');
     res.status(200).json(clubs);
   } catch (error) {
-    res.status(500).json({ 
-        message: 'Error fetching clubs', 
-        error: error.message 
+    res.status(500).json({
+      message: 'Error fetching clubs',
+      error: error.message,
     });
   }
 };
@@ -15,15 +15,15 @@ const getAllClubs = async (req, res) => {
 const getClubById = async (req, res) => {
   try {
     const club = await Club.findById(req.params.id).populate(
-        'members',
-        'name email',
+      'members',
+      'name email',
     );
     if (!club) return res.status(404).json({ message: 'Club not found' });
     res.status(200).json(club);
   } catch (error) {
-    res.status(500).json({ 
-        message: 'Error fetching club', 
-        error: error.message 
+    res.status(500).json({
+      message: 'Error fetching club',
+      error: error.message,
     });
   }
 };
@@ -34,9 +34,9 @@ const createClub = async (req, res) => {
     await club.save();
     res.status(201).json({ message: 'Club created successfully' });
   } catch (error) {
-    res.status(400).json({ 
-        message: 'Invalid club data', 
-        error: error.message 
+    res.status(400).json({
+      message: 'Invalid club data',
+      error: error.message,
     });
   }
 };
@@ -44,15 +44,15 @@ const createClub = async (req, res) => {
 const updateClub = async (req, res) => {
   try {
     const club = await Club.findByIdAndUpdate(req.params.id, req.body, {
-        new: true,
-        runValidators: true,
+      new: true,
+      runValidators: true,
     });
     if (!club) return res.status(404).json({ message: 'Club not found' });
     res.status(200).json({ message: 'Club updated successfully' });
   } catch (error) {
-    res.status(400).json({ 
-        message: 'Error updating club', 
-        error: error.message 
+    res.status(400).json({
+      message: 'Error updating club',
+      error: error.message,
     });
   }
 };
@@ -63,9 +63,9 @@ const deleteClub = async (req, res) => {
     if (!club) return res.status(404).json({ message: 'Club not found' });
     res.status(200).json({ message: 'Club deleted successfully' });
   } catch (error) {
-    res.status(500).json({ 
-        message: 'Error deleting club', 
-        error: error.message 
+    res.status(500).json({
+      message: 'Error deleting club',
+      error: error.message,
     });
   }
 };
@@ -75,5 +75,5 @@ module.exports = {
   getClubById,
   createClub,
   updateClub,
-  deleteClub
+  deleteClub,
 };
